# jpod_nano

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/audio/: player.cpp  player.hpp  playlist.cpp  playlist.hpp
src/cli/: cli.cpp  cli.hpp
tests/: test_cli.cpp  test_player.cpp  test_playlist.cpp
